<resources>
    <string name="app_name">检测仪WiFi助手</string>
    <string name="contentDescription">选项</string>
    <string name="device_setting">仪器配置</string>
    <string name="wifi_setting">WIFI配置</string>
    <string name="pattern">通信方式</string>
    <string name="config">参数配置</string>
    <string name="wifiname">WIFI名称</string>
    <string name="wifipwd">WIFI密码</string>
    <string name="wifi_ip">目标IP</string>
    <string name="wifi_port">目标端口</string>
    <string name="local_ip">本地IP</string>
    <string name="local_port">本地端口</string>
    <string name="about">关于</string>
    <string name="dot">.</string>
    <string name="udp">UDP</string>
    <string name="tcp">TCP</string>
    <string name="cancel">取消</string>
    <string name="sendText">输入发送数据</string>
    <string name="receiver">数据接收处</string>
    <string name="send">发送</string>
    <string name="clean">清空</string>
    <string name="cyperight">Copyright © 2018</string>
    <string name="motor_setting">设置步进电机工作状态</string>
    <string name="step_direction">设置步进方向</string>
    <string name="step_speed">设置步进速度</string>
    <string name="step_pulse">设置步进脉冲</string>
    <string name="do_pulse">执行输出脉冲</string>
    <string name="close_pulse">停止输出脉冲</string>
    <string name="channel_setting">设置光开关通道</string>
    <string name="open_laser">打开激光器</string>
    <string name="close_laser">关闭激光器</string>
    <string name="valve_setting">设置十通阀位置</string>
    <string name="reset_valve">复位十通阀</string>
    <string name="read_AD">读AD数据</string>
    <string name="read_ID">读AD芯片ID</string>
    <string name="motor_OK">就绪</string>
    <string name="motor_Close">关闭</string>
    <string name="motor_direction1">步进方向1</string>
    <string name="motor_direction2">步进方向2</string>
    <string name="motor_speed1">速度1</string>
    <string name="motor_speed2">速度2</string>
    <string name="motor_pulse1">脉冲1</string>
    <string name="motor_pulse2">脉冲2</string>
    <string name="laser_channel1">通道1</string>
    <string name="laser_channel2">通道2</string>
    <string name="valve_position1">位置1</string>
    <string name="valve_position2">位置2</string>
    <string name="title_activity_settings">设置</string>
    <string name="base_permission">APP启动需要访问文件，使用网络等权限</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
