<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_content_2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_2"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:layout_height="?attr/actionBarSize"
            android:layout_width="fill_parent"
            android:id="@+id/toolbar_2"
            android:background="?attr/colorPrimary" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/mainMotor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:shrinkColumns="0"
            android:stretchColumns="0">

            <TableRow
                android:id="@+id/patternMotor"
                android:layout_width="fill_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp" >
                <TextView
                    android:layout_height="fill_parent"
                    android:layout_width="wrap_content"
                    android:drawableStart="@mipmap/ic_pattern"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/motor_setting"
                    android:textSize="22sp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="end"
                    android:gravity="center_vertical"
                    android:src="@mipmap/ic_into"
                    android:contentDescription="@string/contentDescription"/>
            </TableRow>
            <TableRow
                android:id="@+id/patternDirection"
                android:layout_width="fill_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp">
                <TextView
                    android:layout_height="fill_parent"
                    android:layout_width="wrap_content"
                    android:drawableStart="@mipmap/ic_pattern"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/step_direction"
                    android:textSize="22sp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="end"
                    android:gravity="center_vertical"
                    android:src="@mipmap/ic_into"
                    android:contentDescription="@string/contentDescription"/>
            </TableRow>
            <TableRow
                android:id="@+id/patternSpeed"
                android:layout_width="fill_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp">
                <TextView
                    android:layout_height="fill_parent"
                    android:layout_width="wrap_content"
                    android:drawableStart="@mipmap/ic_pattern"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/step_speed"
                    android:textSize="22sp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="end"
                    android:gravity="center_vertical"
                    android:src="@mipmap/ic_into"
                    android:contentDescription="@string/contentDescription"/>
            </TableRow>
            <TableRow
                android:id="@+id/patternPulse"
                android:layout_width="fill_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp">
                <TextView
                    android:layout_height="fill_parent"
                    android:layout_width="wrap_content"
                    android:drawableStart="@mipmap/ic_pattern"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/step_pulse"
                    android:textSize="22sp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="end"
                    android:gravity="center_vertical"
                    android:src="@mipmap/ic_into"
                    android:contentDescription="@string/contentDescription"/>
            </TableRow>
            <TableRow
                android:id="@+id/patternChannel"
                android:layout_width="fill_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp">
                <TextView
                    android:layout_height="fill_parent"
                    android:layout_width="wrap_content"
                    android:drawableStart="@mipmap/ic_pattern"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/channel_setting"
                    android:textSize="22sp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="end"
                    android:gravity="center_vertical"
                    android:src="@mipmap/ic_into"
                    android:contentDescription="@string/contentDescription"/>
            </TableRow>
            <TableRow
                android:id="@+id/patternValve"
                android:layout_width="fill_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp">
                <TextView
                    android:layout_height="fill_parent"
                    android:layout_width="wrap_content"
                    android:drawableStart="@mipmap/ic_pattern"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/valve_setting"
                    android:textSize="22sp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="end"
                    android:gravity="center_vertical"
                    android:src="@mipmap/ic_into"
                    android:contentDescription="@string/contentDescription"/>
            </TableRow>
        </TableLayout>
        <TableLayout
            android:id="@+id/pattern"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:shrinkColumns="0"
            android:stretchColumns="0">
            <TableRow
                android:layout_width="fill_parent"
                android:stretchColumns="0,1"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp">
                <Button
                    android:id="@+id/doPulse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/do_pulse"/>
                 <Button
                    android:id="@+id/closePulse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/close_pulse"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:stretchColumns="0,1"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp">
                <Button
                    android:id="@+id/openLaser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/open_laser"/>
                <Button
                    android:id="@+id/closeLaser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/close_laser"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:stretchColumns="0,1"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp">
                 <Button
                    android:id="@+id/readAD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:layout_marginTop="0dp"
                    android:text="@string/read_AD"/>
                 <Button
                    android:id="@+id/readID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/read_ID"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>