<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/pattern_menu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="@drawable/border">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/motorOK"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="4"
                android:background="@drawable/button_vary"
                android:text="@string/motor_OK"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/motorOKModify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/button_vary"
                android:text="..."
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:id="@+id/motorClose"
                android:text="@string/motor_Close"
                android:layout_weight="4"
                android:background="@drawable/button_vary"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/motorCloseModify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/button_vary"
                android:text="..."
                android:textStyle="bold"/>
        </LinearLayout>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:background="@drawable/button_vary"
            android:textStyle="bold"/>
    </LinearLayout>

</RelativeLayout>